# haskus-system

./: .gitignore  .travis.yml  CHANGES.md  LICENSE  Makefile  README  README.md  README.rst  Roadmap.md  TODO.md  ViperVM.cabal  WritingBindings.md  build.sh  cabal.project  haskus-system-examples.cabal  haskus-system.cabal  manage.sh  package.yaml  stack.yaml  system.yaml
.github/workflows/: ci.yml
apps/: MMUTest.hs  MemoryTest.hs  PlatformInfo.hs  TestSyscalls.hs
data/web/css/: style.css
doc/: Data.mm  Makefile  Tutorial.tex  ViperVM.mm  manual.rst  overview.md  vipervm.css
doc/Introduction/: Introduction.tex  Makefile
doc/Introduction/src/: svg.tex
doc/Proposal/: Makefile  Proposal.tex
doc/Tutorial/: Makefile  Tutorial.tex
doc/manual/: abstract_architecture.md  binary.md  bindings.md  intro.md  memory.md  x86.md
doc/reports/2d-region-intersect/: 2d-region-intersect.tex  Makefile  rvdtx.sty
doc/reports/data-management/: Makefile  data-management.tex
doc/src/tutorial/: 00.tex  01.tex  02.tex
doc/todo/: CPUSupport  KernelFusion  Unums.md
haskus-system/: haskus-system.cabal  stack.yaml
haskus-system-build/: README.md  haskus-system-build.cabal  stack.yaml
haskus-system-examples/: haskus-system-examples.cabal  package.yaml  stack.yaml  system.yaml
haskus-system-examples/src/clock/: Main.hs
haskus-system-examples/src/demo/: Main.hs
haskus-system-examples/src/device-open/: Main.hs
haskus-system-examples/src/display-connectors/: Main.hs
haskus-system-examples/src/display-modes/: Main.hs
haskus-system-examples/src/display-properties/: Main.hs
haskus-system-examples/src/display-state/: Main.hs
haskus-system-examples/src/image/: logo.xcf
haskus-system-examples/src/sound/: Main.hs
haskus-system-examples/src/syscall_bench/: Main.hs
haskus-system-examples/src/test/: Main.hs
haskus-system-examples/src/tutorial/: TutCreateGenericFrame.hs  TutDisplays.hs  TutEntitiesIDs.hs  TutFirstPipeline.hs  TutFrameSwitch.hs  TutGenericFrame.hs  TutProperties.hs  TutSingleFrame.hs  TutTetris.hs  TutVideoDisplays.hs
haskus-system-tools/: README.rst  haskus-system-tools.cabal  package.yaml  stack.yaml
haskus-system/src/lib/Haskus/: System.hs
haskus-system/src/lib/Haskus/Apps/: CPIO.hs  Disassembler.hs
haskus-system/src/lib/Haskus/Arch/Common/: Immediate.hs  Memory.hs  Register.hs
haskus-system/src/lib/Haskus/Arch/X86_64/: Cpuid.hs  Disassembler.hs
haskus-system/src/lib/Haskus/Arch/X86_64/ISA/: Asm.hs  Assembler.hs  Decoder.hs  Encoder.hs  Encoding.hs  Example.hs  Immediate.hs  Insn.hs  Insns.hs  Memory.hs  MicroArch.hs  Mode.hs  Operand.hs  Ops.hs  Output.hs  Put.hs  Register.hs  Size.hs  Solver.hs
haskus-system/src/lib/Haskus/Arch/X86_64/ISA/Insn/: ADC.hs
haskus-system/src/lib/Haskus/Arch/X86_64/Linux/: Syscall.hs  SyscallTable.hs  Syscalls.hs
haskus-system/src/lib/Haskus/Format/: CPIO.hs  Dwarf.hs  Elf.hs  String.hs  Text.hs
haskus-system/src/lib/Haskus/Format/Compression/: GZip.hs
haskus-system/src/lib/Haskus/Format/Compression/Algorithms/: Deflate.hs  Huffman.hs
haskus-system/src/lib/Haskus/Format/Elf/: Dynamic.hs  GHC.hs  Header.hs  Intel.hs  Move.hs  Note.hs  PreHeader.hs  Relocation.hs  RelocationType.hs  Section.hs  Segment.hs  Symbol.hs  Version.hs
haskus-system/src/lib/Haskus/Format/FileSystem/: ISO9660.hs
haskus-system/src/lib/Haskus/System/: Devices.hs  Event.hs  FileSystem.hs  Graphics.hs  Input.hs  Network.hs  PCI.hs  Power.hs  Process.hs  Sys.hs  System.hs  Terminal.hs
haskus-system/src/lib/Haskus/System/Graphics/: Colour.hs  Config.hs  Diagrams.hs  Drawing.hs  Scene.hs
haskus-system/src/lib/Haskus/System/Linux/: Devices.hs  Error.hs  ErrorCode.hs  EventPoll.hs  FileSystem.hs  Futex.hs  Handle.hs  Info.hs  Input.hs  Ioctl.hs  KernelEvent.hs  Memory.hs  Modules.hs  Network.hs  Pipe.hs  Power.hs  Process.hs  Signal.hs  Terminal.hs  Time.hs  Topology.hs  Trace.hs
haskus-system/src/lib/Haskus/System/Linux/FileSystem/: Directory.hs  Mount.hs  Notification.hs  ReadWrite.hs  SymLink.hs
haskus-system/src/lib/Haskus/System/Linux/Graphics/: AtomicConfig.hs  Capability.hs  Entities.hs  Event.hs  Frame.hs  FrameSource.hs  GenericBuffer.hs  Helper.hs  HostBuffer.hs  KIO.hs  Mode.hs  Object.hs  PixelFormat.hs  Property.hs  State.hs
haskus-system/src/lib/Haskus/System/Linux/Internals/: Arg.hs  Error.hs  Fcntl.hs  FileSystem.hs  Graphics.hs  IfLink.hs  Input.hs  Ioctl.hs  Netlink.hs  NetlinkRoute.hs  Reboot.hs  Sound.hs  Tables.hs  Terminal.hs
haskus-system/src/lib/Haskus/System/Linux/Network/: SendReceive.hs
haskus-system/src/lib/Haskus/System/Linux/Process/: Auxiliary.hs  ControlGroup.hs  MemoryMap.hs
haskus-system/src/lib/Haskus/System/Linux/Sound/: Pcm.hs
haskus-system/src/lib/Haskus/System/PCI/: MakeTable.hs
haskus-system/src/lib/Haskus/System/Posix/: Malloc.hs
haskus-system/src/lib/Haskus/System/Process/: MemoryMap.hs
haskus-system/src/tests/: Main.hs
haskus-system/src/tests/Haskus/Tests/: Common.hs  System.hs
haskus-system/src/tests/Haskus/Tests/Arch/Linux/: ErrorCode.hs  Input.hs
haskus-system/src/tests/Haskus/Tests/System/: Devices.hs
lib/ViperVM/: Platform.hs
scripts/: ContFlow.hs  Unums.hs  json.hs
src/: Build.hs  Clock.hs  Demo.hs  DisplayConnectors.hs  DisplayControllers.hs  DisplayEncoders.hs  DisplayGamma.hs  DisplayModes.hs  DisplayPlanes.hs  DisplayProperties.hs  DisplayState.hs  HelloWorld.hs  ListDevices.hs  OpenDevice.hs  Power.hs  PowerFlush.hs  Sound.hs  Test.hs  VDSO.hs  VDSO2.hs
src/Clock/: Render.hs
src/Demo/: Diagrams.hs  Graphics.hs
src/apps/: Disass.hs  MemoryTest.hs  PlatformInfo.hs  TestKernels.hs  TestLinuxGraphics.hs  TestSyscalls.hs  Web.hs  gunzip.hs  huffman.hs  udev.hs
src/bench/: BitReverse.hs
src/clock/: Main.hs
src/demo/: Main.hs
src/device-open/: Main.hs
src/display-modes/: Main.hs
src/display-properties/: Main.hs
src/display-state/: Main.hs
src/image/: abcd.xcf
src/kernel-events/: Main.hs
src/sound/: Main.hs
src/test/: Main.hs
src/tests/: BinaryBits.hs  BinaryGetPut.hs  Common.hs  Tests.hs  UtilsHArray.hs
src/vdso/: Main.hs
(+722 files in other folders)
