name:                ViperVM
version:             0.4.0.0
synopsis:            Set of tools for system programming
license:             LGPL-3
license-file:        LICENSE
author:              Sylvain HENRY
maintainer:          hsyl20@gmail.com
homepage:            http://www.vipervm.org
copyright:           Sylvain HENRY 2015
category:            System
build-type:          Simple
cabal-version:       >=1.20

description:
   This package provides a panel of tools for system programming, mostly on
   x86-64 architecture for now.
   .
   It provides direct access to Linux system calls (\syscalls\) on x86-64
   architecture without going through the libc and without going through the
   GHC FFI mechanism by default (so be careful not to use blocking system calls).
   .
   On top of that, it gives access to Linux subsystems. For now:
       * input: events from keyboard, mouse, touchscreen, sound card (when a
         connector is plugged in/plugged out), etc.
       * graphics: manage monitors and what is displayed on them
   .
   It provides support for some file formats used in system programming such as
   ELF (with DWARF debug information), CPIO, etc. It provides a few modules to
   deal with binary formats on top of Data.Binary that are used internally. It
   supports some compression algorithms and containers (Deflate, GZip, etc.)
   used in other file formats.
   .
   Finally, as ViperVM started as a runtime system for heterogeneous
   architectures (GPGPU, etc.), it provides modules to dynamically load and use
   OpenCL libraries. \Platform\ modules are an attempt to abstract over
   memories and processors of heterogeneous architectures to automatically
   handle computations and data transfers. The ultimate goal is to provide an
   execution model using parallel functional programming, but we are not there
   yet. \Library\ modules are supposed to handle a library of computational
   kernel sources (OpenCL, C, etc.). Compiled kernels are stored to avoid
   superfluous compilations.

source-repository head
  type: git
  location: git://github.com/hsyl20/ViperVM.git


library
  exposed-modules:

    ViperVM.Arch.Common.Errors

    ViperVM.Arch.GenericHost.Memory

    ViperVM.Arch.X86_64.Cpuid

    ViperVM.Arch.X86_64.Linux.Syscall
    ViperVM.Arch.X86_64.Linux.Syscalls

    ViperVM.Arch.Linux.ErrorCode
    ViperVM.Arch.Linux.EventPoll
    ViperVM.Arch.Linux.Terminal
    ViperVM.Arch.Linux.FileDescriptor
    ViperVM.Arch.Linux.FileSystem
    ViperVM.Arch.Linux.FileSystem.Flush
    ViperVM.Arch.Linux.FileSystem.Directory
    ViperVM.Arch.Linux.FileSystem.Mount
    ViperVM.Arch.Linux.FileSystem.Notification
    ViperVM.Arch.Linux.FileSystem.OpenClose
    ViperVM.Arch.Linux.FileSystem.ReadWrite
    ViperVM.Arch.Linux.Futex
    ViperVM.Arch.Linux.Info
    ViperVM.Arch.Linux.Ioctl
    ViperVM.Arch.Linux.Memory
    ViperVM.Arch.Linux.Network
    ViperVM.Arch.Linux.Network.SendReceive
    ViperVM.Arch.Linux.Pipe
    ViperVM.Arch.Linux.Power
    ViperVM.Arch.Linux.Process
    ViperVM.Arch.Linux.Signal
    ViperVM.Arch.Linux.Syscalls
    ViperVM.Arch.Linux.Time
    ViperVM.Arch.Linux.Trace
    ViperVM.Arch.Linux.Utils

    ViperVM.Arch.Linux.Input.Absolute
    ViperVM.Arch.Linux.Input.Device
    ViperVM.Arch.Linux.Input.Event
    ViperVM.Arch.Linux.Input.ForceFeedback
    ViperVM.Arch.Linux.Input.Keys
    ViperVM.Arch.Linux.Input.LEDs
    ViperVM.Arch.Linux.Input.Misc
    ViperVM.Arch.Linux.Input.MultiTouch
    ViperVM.Arch.Linux.Input.Relative
    ViperVM.Arch.Linux.Input.Repeat
    ViperVM.Arch.Linux.Input.Sound
    ViperVM.Arch.Linux.Input.Switch
    ViperVM.Arch.Linux.Input.Sync

    ViperVM.Arch.Linux.System.System
    ViperVM.Arch.Linux.System.KernelEvent
    ViperVM.Arch.Linux.System.Topology
    ViperVM.Arch.Linux.System.Graphics

    ViperVM.Arch.Linux.Process.MemoryMap
    ViperVM.Arch.Linux.Process.ControlGroup

    ViperVM.Arch.Linux.Graphics.Capability
    ViperVM.Arch.Linux.Graphics.Card
    ViperVM.Arch.Linux.Graphics.Connector
    ViperVM.Arch.Linux.Graphics.Controller
    ViperVM.Arch.Linux.Graphics.Cursor
    ViperVM.Arch.Linux.Graphics.Encoder
    ViperVM.Arch.Linux.Graphics.FrameBuffer
    ViperVM.Arch.Linux.Graphics.GenericBuffer
    ViperVM.Arch.Linux.Graphics.Mode
    ViperVM.Arch.Linux.Graphics.Object
    ViperVM.Arch.Linux.Graphics.Options
    ViperVM.Arch.Linux.Graphics.PixelFormat
    ViperVM.Arch.Linux.Graphics.Plane

    ViperVM.Arch.OpenCL.All
    ViperVM.Arch.OpenCL.Bindings
    ViperVM.Arch.OpenCL.CommandQueue
    ViperVM.Arch.OpenCL.Context
    ViperVM.Arch.OpenCL.Device
    ViperVM.Arch.OpenCL.Entity
    ViperVM.Arch.OpenCL.Error
    ViperVM.Arch.OpenCL.Event
    ViperVM.Arch.OpenCL.ImageFormat
    ViperVM.Arch.OpenCL.Kernel
    ViperVM.Arch.OpenCL.Library
    ViperVM.Arch.OpenCL.Mem
    ViperVM.Arch.OpenCL.Platform
    ViperVM.Arch.OpenCL.Program
    ViperVM.Arch.OpenCL.Sampler
    ViperVM.Arch.OpenCL.Types

    ViperVM.Arch.Posix.Malloc

    ViperVM.Utils.Hash
    ViperVM.Utils.BitSet

    ViperVM.STM.TMap
    ViperVM.STM.TSet
    ViperVM.STM.TList
    ViperVM.STM.TGraph

    ViperVM.Format.CPIO

    ViperVM.Format.Elf
    ViperVM.Format.Elf.PreHeader
    ViperVM.Format.Elf.Header
    ViperVM.Format.Elf.Section
    ViperVM.Format.Elf.Segment
    ViperVM.Format.Elf.Symbol
    ViperVM.Format.Elf.Relocation
    ViperVM.Format.Elf.RelocationType
    ViperVM.Format.Elf.Dynamic
    ViperVM.Format.Elf.Version
    ViperVM.Format.Elf.Note
    ViperVM.Format.Elf.Move
    ViperVM.Format.Elf.Intel

    ViperVM.Format.Dwarf

    ViperVM.Format.Compression.Algorithms.Huffman
    ViperVM.Format.Compression.Algorithms.LZ77
    ViperVM.Format.Compression.Algorithms.Deflate
    ViperVM.Format.Compression.GZip

    ViperVM.Format.Binary.BitOps
    ViperVM.Format.Binary.BitReverse
    ViperVM.Format.Binary.BitOrder
    ViperVM.Format.Binary.BitGet
    ViperVM.Format.Binary.BitPut
    ViperVM.Format.Binary.BitField
    ViperVM.Format.Binary.Endianness
    ViperVM.Format.Binary.Get
    ViperVM.Format.Binary.Put
    ViperVM.Format.Binary.VariableLength


    ViperVM.Platform.Drivers
    ViperVM.Platform.Drivers.OpenCL
    ViperVM.Platform.Drivers.Host

    ViperVM.Platform.Types
    ViperVM.Platform.Host
    ViperVM.Platform.PlatformInfo
    ViperVM.Platform.Topology
    ViperVM.Platform.Memory
    ViperVM.Platform.Loading
    ViperVM.Platform.Config
    ViperVM.Platform.Transfer
    ViperVM.Platform.TransferResult
    ViperVM.Platform.TransferBench

    ViperVM.Platform.Memory.Region
    ViperVM.Platform.Memory.Layout
    ViperVM.Platform.Memory.Data
    ViperVM.Platform.Memory.Object

    ViperVM.Platform.Data.Matrix
    ViperVM.Platform.Data.Vector

    ViperVM.Platform.Processing.Kernel

    ViperVM.Library.Library
    ViperVM.Library.Kernel
    ViperVM.Library.Maths.MatrixOps

  c-sources: 
    src/lib/ViperVM/Arch/X86_64/Linux/syscall.c

  cc-options: -O3

  build-depends:       
         base                      >= 4.8
      ,  containers                >= 0.5
      ,  list-t                    >= 0.4
      ,  stm                       >= 2.4
      ,  stm-containers            >= 0.2
      ,  stm-linkedlist            >= 0.1
      ,  hashable                  >= 1.2
      ,  cereal                    >= 0.4
      ,  safecopy                  >= 0.8
      ,  bytestring                >= 0.10
      ,  system-fileio             >= 0.3
      ,  system-filepath           >= 0.4
      ,  crypto-api                >= 0.13
      ,  pureMD5                   >= 2.1
      ,  cpuid                     >= 0.2
      ,  text                      >= 1.2
      ,  filepath                  >= 1.4
      ,  either                    >= 4.4
      ,  vector                    >= 0.10
      ,  directory                 >= 1.2
      ,  megaparsec                >= 4.1
      ,  dynamic-linker-template   >= 0.1
      ,  transformers              >= 0.4
      ,  unix                      >= 2.7
      ,  criterion                 >= 1.1
      ,  c-storable-deriving       >= 0.1.2
      ,  fixed-vector              >= 0.8
      ,  binary                    >= 0.7
      ,  binary-bits               >= 0.6
      ,  utf8-string               >= 1.0
      ,  pqueue                    >= 1.3
      ,  split                     >= 0.2
      ,  mtl                       >= 2.2

  build-tools: 
  ghc-options:          -Wall -threaded -O2
  default-language:     Haskell2010
  hs-source-dirs:       src/lib

test-suite tests
   type:                detailed-0.9
   test-module:         BinaryBits
   hs-source-dirs:      src/tests
   ghc-options: -Wall -threaded -O3
   default-language:     Haskell2010

   build-depends:    
         base
      ,  ViperVM
      ,  Cabal
      ,  cabal-test-quickcheck   >= 0.1
      ,  QuickCheck              >= 2.8



executable MemoryTest
   main-is:             MemoryTest.hs
   hs-source-dirs:      src/apps
   ghc-options:         -Wall -threaded -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM
      ,  stm
      ,  containers

executable TestLinuxGraphics
   main-is:             TestLinuxGraphics.hs
   hs-source-dirs:      src/apps
   ghc-options:         -Wall -threaded -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM
      ,  either
      ,  transformers

executable PlatformWeb
   main-is:             Main.hs
   hs-source-dirs:      src/apps/PlatformWeb
   other-modules:       Paths_ViperVM
   ghc-options:         -Wall -threaded -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM
      ,  stm
      ,  containers
      ,  happstack-server     >= 7.4
      ,  blaze-html           >= 0.8
      ,  blaze-markup         >= 0.7
      ,  transformers         >= 0.4
      ,  network              >= 2.6
      ,  file-embed           >= 0.0.9
      ,  bytestring           >= 0.10
      ,  optparse-applicative >= 0.12

executable ElfWeb
   hs-source-dirs:      src/apps/Elf
   main-is:             Main.hs
   ghc-options:         -Wall -threaded -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM
      ,  happstack-server     >= 7.4
      ,  bytestring           >= 0.10
      ,  lucid                >= 2.9
      ,  transformers         >= 0.4
      ,  file-embed           >= 0.0.9
      ,  optparse-applicative >= 0.12
      ,  text                 >= 1.2
      ,  text-format          >= 0.3
      ,  vector               >= 0.10
      ,  containers           >= 0.5

executable TestKernels
   main-is:             TestKernels.hs
   hs-source-dirs:      src/apps
   ghc-options:         -Wall -threaded -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM

executable TestSyscalls
   main-is:             TestSyscalls.hs
   hs-source-dirs:      src/apps
   ghc-options:         -Wall -threaded -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM

executable HaskOS
   main-is:             HaskOS.hs
   hs-source-dirs:      src/apps/OS
   ghc-options:         -Wall -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM
      ,  either
      ,  transformers

executable huffman
   main-is:             huffman.hs
   hs-source-dirs:      src/apps
   ghc-options:         -Wall -threaded -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM
      ,  bytestring           >= 0.10

executable gunzip
   main-is:             gunzip.hs
   hs-source-dirs:      src/apps
   ghc-options:         -Wall -threaded -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM
      ,  bytestring           >= 0.10
      ,  optparse-applicative >= 0.12
      ,  filepath             >= 1.4

executable udev
   main-is:             udev.hs
   hs-source-dirs:      src/apps
   ghc-options:         -Wall -threaded -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM
      ,  either
      ,  transformers
