name:                ViperVM
version:             0.4.0.0
synopsis:            Set of tools for system programming
license:             LGPL-3
license-file:        LICENSE
author:              Sylvain HENRY
maintainer:          hsyl20@gmail.com
homepage:            http://www.vipervm.org
copyright:           Sylvain HENRY 2015
category:            System
build-type:          Simple
cabal-version:       >=1.20

description:
   This package provides a panel of tools for system programming, mostly on
   x86-64 architecture for now.
   .
   It provides direct access to Linux system calls (\syscalls\) on x86-64
   architecture without going through the libc and without going through the
   GHC FFI mechanism by default (so be careful not to use blocking system calls).
   .
   On top of that, it gives access to Linux subsystems. For now:
       * input: events from keyboard, mouse, touchscreen, sound card (when a
         connector is plugged in/plugged out), etc.
       * graphics: manage monitors and what is displayed on them
   .
   It provides support for some file formats used in system programming such as
   ELF (with DWARF debug information), CPIO, etc. It provides a few modules to
   deal with binary formats on top of Data.Binary that are used internally. It
   supports some compression algorithms and containers (Deflate, GZip, etc.)
   used in other file formats.
   .
   Finally, as ViperVM started as a runtime system for heterogeneous
   architectures (GPGPU, etc.), it provides modules to dynamically load and use
   OpenCL libraries. \Platform\ modules are an attempt to abstract over
   memories and processors of heterogeneous architectures to automatically
   handle computations and data transfers. The ultimate goal is to provide an
   execution model using parallel functional programming, but we are not there
   yet. \Library\ modules are supposed to handle a library of computational
   kernel sources (OpenCL, C, etc.). Compiled kernels are stored to avoid
   superfluous compilations.

source-repository head
  type: git
  location: git://github.com/hsyl20/ViperVM.git


library
  exposed-modules:

    ViperVM.Arch.Common.Errors

    ViperVM.Arch.X86_64.Cpuid

    ViperVM.Arch.X86_64.Linux.Syscall
    ViperVM.Arch.X86_64.Linux.Syscalls
    ViperVM.Arch.X86_64.MicroArch

    ViperVM.Arch.X86_64.Assembler.Opcode
    ViperVM.Arch.X86_64.Assembler.New
    ViperVM.Arch.X86_64.Assembler.RexPrefix
    ViperVM.Arch.X86_64.Assembler.VexPrefix
    ViperVM.Arch.X86_64.Assembler.LegacyPrefix
    ViperVM.Arch.X86_64.Assembler.ModRM
    ViperVM.Arch.X86_64.Assembler.Mode
    ViperVM.Arch.X86_64.Assembler.Registers
    ViperVM.Arch.X86_64.Assembler.RegisterFile
    ViperVM.Arch.X86_64.Assembler.Size

    -- ViperVM.Arch.X86_64.Assembler.Insn
    -- ViperVM.Arch.X86_64.Assembler.Utils
    -- ViperVM.Arch.X86_64.Assembler.Operand
    ViperVM.Arch.X86_64.Assembler.Encoding
    -- ViperVM.Arch.X86_64.Assembler.OperandSize
    -- ViperVM.Arch.X86_64.Assembler.EvexPrefix
    -- ViperVM.Arch.X86_64.Assembler.Decoder
    -- ViperVM.Arch.X86_64.Assembler.Encoder
    ViperVM.Arch.X86_64.Assembler.Insns
    -- ViperVM.Arch.X86_64.Assembler.X86Dec
    -- ViperVM.Arch.X86_64.Assembler.X87

    ViperVM.Arch.Linux.Internals.FileSystem
    ViperVM.Arch.Linux.Internals.Input
    ViperVM.Arch.Linux.Internals.Sound
    ViperVM.Arch.Linux.Internals.Graphics
    ViperVM.Arch.Linux.Internals.Reboot
    ViperVM.Arch.Linux.Internals.Ioctl
    ViperVM.Arch.Linux.Internals.Fcntl
    ViperVM.Arch.Linux.Internals.Handle
    ViperVM.Arch.Linux.Internals.Arg

    ViperVM.Arch.Linux.Error
    ViperVM.Arch.Linux.ErrorCode
    ViperVM.Arch.Linux.EventPoll
    ViperVM.Arch.Linux.Handle
    ViperVM.Arch.Linux.FileSystem
    ViperVM.Arch.Linux.FileSystem.Directory
    ViperVM.Arch.Linux.FileSystem.Flush
    ViperVM.Arch.Linux.FileSystem.Mount
    ViperVM.Arch.Linux.FileSystem.Notification
    ViperVM.Arch.Linux.FileSystem.OpenClose
    ViperVM.Arch.Linux.FileSystem.ReadWrite
    ViperVM.Arch.Linux.Futex
    ViperVM.Arch.Linux.Info
    ViperVM.Arch.Linux.Ioctl
    ViperVM.Arch.Linux.KernelEvent
    ViperVM.Arch.Linux.Memory
    ViperVM.Arch.Linux.Modules
    ViperVM.Arch.Linux.Network
    ViperVM.Arch.Linux.Network.SendReceive
    ViperVM.Arch.Linux.Pipe
    ViperVM.Arch.Linux.Power
    ViperVM.Arch.Linux.Process
    ViperVM.Arch.Linux.Signal
    ViperVM.Arch.Linux.Syscalls
    ViperVM.Arch.Linux.Terminal
    ViperVM.Arch.Linux.Time
    ViperVM.Arch.Linux.Topology
    ViperVM.Arch.Linux.Trace

    ViperVM.Arch.Linux.Process.MemoryMap
    ViperVM.Arch.Linux.Process.ControlGroup

    ViperVM.Arch.Linux.Graphics.Atomic
    ViperVM.Arch.Linux.Graphics.Capability
    ViperVM.Arch.Linux.Graphics.Card
    ViperVM.Arch.Linux.Graphics.Connector
    ViperVM.Arch.Linux.Graphics.Controller
    ViperVM.Arch.Linux.Graphics.Encoder
    ViperVM.Arch.Linux.Graphics.Event
    ViperVM.Arch.Linux.Graphics.FrameBuffer
    ViperVM.Arch.Linux.Graphics.GenericBuffer
    ViperVM.Arch.Linux.Graphics.Mode
    ViperVM.Arch.Linux.Graphics.Object
    ViperVM.Arch.Linux.Graphics.PixelFormat
    ViperVM.Arch.Linux.Graphics.Plane
    ViperVM.Arch.Linux.Graphics.Property
    ViperVM.Arch.Linux.Graphics.Helper

    ViperVM.Arch.OpenCL.All
    ViperVM.Arch.OpenCL.CommandQueue
    ViperVM.Arch.OpenCL.Context
    ViperVM.Arch.OpenCL.Device
    ViperVM.Arch.OpenCL.Entity
    ViperVM.Arch.OpenCL.Error
    ViperVM.Arch.OpenCL.Event
    ViperVM.Arch.OpenCL.ImageFormat
    ViperVM.Arch.OpenCL.Kernel
    ViperVM.Arch.OpenCL.Library
    ViperVM.Arch.OpenCL.Mem
    ViperVM.Arch.OpenCL.Platform
    ViperVM.Arch.OpenCL.Program
    ViperVM.Arch.OpenCL.Sampler
    ViperVM.Arch.OpenCL.Types

    ViperVM.Arch.Posix.Malloc

    ViperVM.System
    ViperVM.System.Sys
    ViperVM.System.System
    ViperVM.System.Graphics
    ViperVM.System.Graphics.Drawing
    ViperVM.System.Graphics.Diagrams
    ViperVM.System.Input
    ViperVM.System.Terminal
    ViperVM.System.Process
    ViperVM.System.Power
    ViperVM.System.Event

    ViperVM.Utils.Variant
    ViperVM.Utils.HArray
    ViperVM.Utils.Flow
    ViperVM.Utils.MultiState
    ViperVM.Utils.Hash
    ViperVM.Utils.HList
    ViperVM.Utils.EmbedByteString
    ViperVM.Utils.Memory
    ViperVM.Utils.Types
    ViperVM.Utils.STM.TMap
    ViperVM.Utils.STM.TSet
    ViperVM.Utils.STM.TList
    ViperVM.Utils.STM.Future
    ViperVM.Utils.STM.TGraph
    ViperVM.Utils.Tuples

    ViperVM.Format.CPIO

    ViperVM.Format.Elf
    ViperVM.Format.Elf.PreHeader
    ViperVM.Format.Elf.Header
    ViperVM.Format.Elf.Section
    ViperVM.Format.Elf.Segment
    ViperVM.Format.Elf.Symbol
    ViperVM.Format.Elf.Relocation
    ViperVM.Format.Elf.RelocationType
    ViperVM.Format.Elf.Dynamic
    ViperVM.Format.Elf.Version
    ViperVM.Format.Elf.Note
    ViperVM.Format.Elf.Move
    ViperVM.Format.Elf.Intel

    ViperVM.Format.Dwarf

    ViperVM.Format.Compression.Algorithms.Huffman
    ViperVM.Format.Compression.Algorithms.LZ77
    ViperVM.Format.Compression.Algorithms.Deflate
    ViperVM.Format.Compression.GZip

    ViperVM.Format.Binary.BitSet
    ViperVM.Format.Binary.BitOps
    ViperVM.Format.Binary.BitOps.BitReverse
    ViperVM.Format.Binary.BitOrder
    ViperVM.Format.Binary.BitGet
    ViperVM.Format.Binary.BitPut
    ViperVM.Format.Binary.BitField
    ViperVM.Format.Binary.Buffer
    ViperVM.Format.Binary.Enum
    ViperVM.Format.Binary.Endianness
    ViperVM.Format.Binary.FixedPoint
    ViperVM.Format.Binary.Get
    ViperVM.Format.Binary.Put
    ViperVM.Format.Binary.VariableLength
    ViperVM.Format.Binary.Vector
    ViperVM.Format.Binary.Union
    ViperVM.Format.Binary.Reader
    ViperVM.Format.Binary.Record
    ViperVM.Format.Binary.Storable


    ViperVM.Platform.Drivers
    ViperVM.Platform.Drivers.OpenCL
    ViperVM.Platform.Drivers.Host

    ViperVM.Platform.Types
    ViperVM.Platform.Host
    ViperVM.Platform.PlatformInfo
    ViperVM.Platform.Topology
    ViperVM.Platform.Memory
    ViperVM.Platform.Loading
    ViperVM.Platform.Config
    ViperVM.Platform.Transfer
    ViperVM.Platform.TransferResult
    ViperVM.Platform.TransferBench

    ViperVM.Platform.Memory.Region
    ViperVM.Platform.Memory.Layout
    ViperVM.Platform.Memory.Data
    ViperVM.Platform.Memory.Object

    ViperVM.Platform.Data.Matrix
    ViperVM.Platform.Data.Vector

    ViperVM.Platform.Processing.Kernel

    ViperVM.Library.Library
    ViperVM.Library.Kernel
    ViperVM.Library.Maths.MatrixOps

  other-modules:

  c-sources: 
    src/lib/ViperVM/Arch/X86_64/Linux/syscall.c
    src/lib/ViperVM/Arch/X86_64/cpuid.c

  cc-options: -O3

  build-depends:       
         base                      >= 4.8
      ,  containers                >= 0.5
      ,  list-t                    >= 0.4
      ,  stm                       >= 2.4
      ,  stm-containers            >= 0.2
      ,  stm-linkedlist            >= 0.1
      ,  hashable                  >= 1.2
      ,  cereal                    >= 0.4
      ,  safecopy                  >= 0.8
      ,  bytestring                >= 0.10
      ,  system-fileio             >= 0.3
      ,  system-filepath           >= 0.4
      ,  pureMD5                   >= 2.1
      ,  text                      >= 1.2
      ,  filepath                  >= 1.4
      ,  either                    >= 4.4
      ,  vector                    >= 0.11
      ,  directory                 >= 1.2
      ,  megaparsec                >= 4.1
      ,  dynamic-linker-template   >= 0.1
      ,  transformers              >= 0.4
      ,  unix                      >= 2.7
      ,  criterion                 >= 1.1
      ,  c-storable-deriving       >= 0.1.3
      ,  pqueue                    >= 1.3
      ,  mtl                       >= 2.2
      ,  template-haskell          >= 2.10
      ,  text-format               >= 0.3
      ,  HList                     >= 0.4
      ,  diagrams                  >= 1.3
      ,  diagrams-lib              >= 1.3
      ,  diagrams-core             >= 1.3
      ,  diagrams-rasterific       >= 1.3
      ,  JuicyPixels               >= 3.2
      ,  loop                      >= 0.3
      ,  Rasterific                >= 0.6

  build-tools: 
  ghc-options:          -Wall -threaded -O3
  default-language:     Haskell2010
  hs-source-dirs:       src/lib

test-suite tests
   type:                detailed-0.9
   test-module:         Tests
   hs-source-dirs:      src/tests
   ghc-options:         -Wall -threaded -O3
   default-language:     Haskell2010
   other-modules:
         Common
      ,  BinaryBits
      ,  BinaryGetPut
      ,  UtilsHArray

   build-depends:    
         base
      ,  ViperVM
      ,  Cabal
      ,  cabal-test-quickcheck   >= 0.1
      ,  QuickCheck              >= 2.8
      ,  bytestring

Benchmark bench-BitReverse
   type:               exitcode-stdio-1.0
   main-is:            BitReverse.hs
   hs-source-dirs:     src/bench
   ghc-options:         -Wall -threaded -O3
   default-language:     Haskell2010
   build-depends:
         base
      ,  ViperVM
      ,  criterion

executable MemoryTest
   main-is:             MemoryTest.hs
   hs-source-dirs:      src/apps
   ghc-options:         -Wall -threaded -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM
      ,  stm
      ,  containers

executable PlatformWeb
   main-is:             Main.hs
   hs-source-dirs:      src/apps/PlatformWeb
   other-modules:
         Paths_ViperVM
      ,  CmdLine
   ghc-options:         -Wall -threaded -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM
      ,  stm
      ,  containers
      ,  happstack-server     >= 7.4
      ,  blaze-html           >= 0.8
      ,  blaze-markup         >= 0.7
      ,  transformers         >= 0.4
      ,  network              >= 2.6
      ,  file-embed           >= 0.0.9
      ,  bytestring           >= 0.10
      ,  optparse-applicative >= 0.12

executable X86Web
   main-is:             Main.hs
   hs-source-dirs:      src/apps/X86Web
   other-modules:       
         Paths_ViperVM
      ,  CmdLine
   ghc-options:         -Wall -threaded -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM
      ,  happstack-server     >= 7.4
      ,  blaze-html           >= 0.8
      ,  blaze-markup         >= 0.7
      ,  transformers         >= 0.4
      ,  network              >= 2.6
      ,  file-embed           >= 0.0.9
      ,  bytestring           >= 0.10
      ,  optparse-applicative >= 0.12
      ,  vector               >= 0.10
      ,  HTTP                 >= 4000


executable ElfWeb
   hs-source-dirs:      src/apps/Elf
   main-is:             Main.hs
   other-modules:       
         CmdLine
   ghc-options:         -Wall -threaded -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM
      ,  happstack-server     >= 7.4
      ,  bytestring           >= 0.10
      ,  lucid                >= 2.9
      ,  transformers         >= 0.4
      ,  file-embed           >= 0.0.9
      ,  optparse-applicative >= 0.12
      ,  text                 >= 1.2
      ,  text-format          >= 0.3
      ,  vector               >= 0.10
      ,  containers           >= 0.5

executable TestKernels
   main-is:             TestKernels.hs
   hs-source-dirs:      src/apps
   ghc-options:         -Wall -threaded -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM

executable TestSyscalls
   main-is:             TestSyscalls.hs
   hs-source-dirs:      src/apps
   ghc-options:         -Wall -threaded -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM

executable huffman
   main-is:             huffman.hs
   hs-source-dirs:      src/apps
   ghc-options:         -Wall -threaded -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM
      ,  bytestring           >= 0.10

executable gunzip
   main-is:             gunzip.hs
   hs-source-dirs:      src/apps
   ghc-options:         -Wall -threaded -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM
      ,  bytestring           >= 0.10
      ,  optparse-applicative >= 0.12
      ,  filepath             >= 1.4

executable udev
   main-is:             udev.hs
   hs-source-dirs:      src/apps
   ghc-options:         -Wall -threaded -O3
   default-language:    Haskell2010
   build-depends: 
         base
      ,  ViperVM
      ,  either
      ,  transformers

-- executable Disass
--    main-is:             Disass.hs
--    hs-source-dirs:      src/apps
--    ghc-options:         -Wall -threaded -O3
--    default-language:    Haskell2010
--    build-depends: 
--          base
--       ,  ViperVM
--       ,  bytestring
